Fixed input and cleaning for WrapUpPage

--- a/frontend/src/components/pages/journey/journey-page.scss
+++ b/frontend/src/components/pages/journey/journey-page.scss
@@ -191,8 +191,6 @@
     width: 100%;
     height: 100%;
     transition: all 0.1s ease-in-out;
-    &:hover {
-    }
   }
 
   &:hover img {
